# greentic-deployer

./: .gitignore  Cargo.toml  MIGRATION_STATUS.md  README.md
.codex/: PR-02.md  PR-04.md  PR-06.md  PR-07.md  PR-08.md  PR-10.md  PR-11.md  PR-14.md  PR-16.md  PR-17.md  PR-21.md  PR-22.md  PR-28.md  Provider-PR-06.md  STATE.json  repo_overview.md
.codex/ci-snippets/: ci_local_check.sh  github_actions_ci.yml
.codex/done/: PR-01.md  PR-03.md  PR-05.md  PR-09.md  PR-12.md  PR-13.md  PR-15.md  PR-18.md  PR-19.md  PR-20.md  PR-23.md  PR-24.md  PR-25.md  PR-26.md  PR-27.md
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
.greentic/deploy/aws/acme/staging/: master.tf  plan.json
.greentic/deploy/aws/acmeplus/staging/: master.tf  variables.tf
.greentic/deploy/azure/acme/staging/: master.bicep
.greentic/deploy/azure/acmeplus/staging/: master.bicep  parameters.json
.greentic/deploy/gcp/acme/staging/: master.yaml  parameters.yaml  plan.json
.greentic/deploy/gcp/acmeplus/staging/: master.yaml  parameters.yaml  plan.json
.tmp3UzaaD/: manifest.cbor
.tmpeuGAGb/: manifest.cbor
ci/: gen_packs.sh  local_check.sh  smoke_deployer.sh
components/iac-write-files/: Cargo.toml  README.md
components/iac-write-files/src/: lib.rs
components/iac-write-files/wit/: greentic-host-iac-write-files.wit
deploy/aws/acme/staging/aws/: main.tf  plan.json  variables.tf
deploy/aws/acmeplus/staging/aws/: main.tf  plan.json  variables.tf
deploy/azure/acme/staging/azure/: main.bicep  plan.json  (+1 more)
docs/: deployment-packs.md  flow-authoring.md  platform_bootstrap.md  platform_bootstrap_adapters.md  platform_bootstrap_example.md  platform_bootstrap_glossary.md  provider-visual-guide.md  provider_onboarding.md
examples/acme-pack/: manifest.cbor  manifest.json
examples/acme-pack/flows/acme-messaging/: flow.json  flow.yaml
examples/acme-plus-pack/: manifest.cbor  manifest.json
examples/acme-plus-pack/flows/ops-alerts/: flow.json  flow.yaml
examples/acme-plus-pack/flows/support-chat/: flow.json  flow.yaml
fixtures/platform-adapters/: http_endpoints.ygtc  mqtt_schema_publish.ygtc  multi_step_wizard.ygtc
fixtures/platform-pack/: installer.wasm  pack.yaml
fixtures/platform-pack/flows/: platform_install.ygtc  platform_upgrade.ygtc
providers/deployer/aws/: pack.yaml
providers/deployer/aws/flows/: deploy_aws_iac.ygtc  deploy_aws_iac.ygtc.resolve.json  deploy_aws_iac.ygtc.resolve.summary.json
scripts/: ci-smoke.sh  gen_placeholders.sh
src/: apply.rs  config.rs  deployment.rs  error.rs  iac.rs  lib.rs  main.rs  pack_introspect.rs  path_safety.rs  placeholder.rs  plan.rs  platform.rs  provider_onboarding.rs  secrets.rs  telemetry.rs
src/bootstrap/: capabilities.rs  cli.rs  config_patch.rs  flow_runner.rs  http_adapter.rs  interaction.rs  mod.rs  mqtt_adapter.rs  network.rs  output.rs  secrets.rs  state.rs
src/platform/: flow.rs  oci.rs
src/providers/: aws.rs  azure.rs  gcp.rs  k8s.rs  local.rs  mod.rs
tests/: acme_e2e.rs  bootstrap_flow_resolution.rs  bootstrap_installer_stub.rs  bootstrap_json_adapter.rs  bootstrap_manifest.rs  bootstrap_output.rs  bootstrap_secrets.rs  bootstrap_state.rs  bootstrap_state_backend.rs  interaction_http.rs  interaction_registry.rs  mqtt_adapter.rs  platform_adapter_fixtures.rs  platform_fixture_install.rs  platform_install_state.rs  platform_resolver.rs  provider_onboarding.rs  smoke_placeholder_local.rs
(+21 files in other folders)
