[package]
name = "greentic-deployer"
version = "0.4.2"
edition = "2024"
description = "Greentic pack deployer generating multi-cloud IaC + manifests"
license = "MIT"
readme = "README.md"
repository = "https://github.com/greentic-ai/greentic-deployer"
homepage = "https://github.com/greentic-ai/greentic-deployer"
documentation = "https://docs.greentic.ai/deployer"
keywords = ["greentic", "deployer", "terraform", "opentofu"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
greentic-flow = { version = "0.4" }
greentic-pack = { version = "0.4" }
greentic-secrets = { version = "0.4", features = ["providers-aws", "providers-azure", "providers-gcp", "providers-dev"] }
greentic-telemetry = { version = "0.4", features = ["otlp"] }
greentic-types = { version = "0.4" }
greentic-interfaces-host = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "8"
zip = { version = "6", default-features = false, features = ["deflate"] }
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
greentic-interfaces-host = { path = "../greentic-interfaces/crates/greentic-interfaces-host" }
